@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.859 2007-10-15 17:53:28 castaglia Exp $
+$Id: NEWS,v 1.860 2007-10-16 16:27:50 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -49,6 +49,8 @@ CVS
   by the proftpd source code.
 - Bug #2992 - The %f LogFormat variable expanded improperly to "-" for
   SITE CHMOD.
+- Bug #2995 - The %f LogFormat variable expanded to same file for RNFR and
+  RNTO.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
